--- a/index.html
+++ b/index.html
@@ -908,12 +908,6 @@
     <div class="container">
         <h1>トレーフルカイロプラクティック<br>予約フォーム
         </h1>
-        <!-- 追加するボタン -->
-        <div class="repeat-booking-wrapper">
-            <button type="button" id="repeatBookingButton" onclick="applyPreviousSelection()">
-                🔁 前回と同じメニューで予約する
-            </button>
-        </div>
 
         <div class="label">お客様名<span class="required">必須</span></div>
 
@@ -984,7 +978,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007397643-Mmm64enZ'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
